--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="common.css" />
     <title>Portfolio JADR</title>
+    <header class="header">
+      <div class="header__logo">
+        <img src="./assets/logo/logo-no-background.png" alt="logo" />
+      </div>
+      <nav class="header__nav">
+        <ul class="header__nav__list">
+          <li class="header__nav__list__item"><a href="#"></a>Inicio</li>
+          <li class="header__nav__list__item"><a href="#"></a>Skills</li>
+          <li class="header__nav__list__item"><a href="#"></a>Contacto</li>
+        </ul>
+      </nav>
+    </header>
   </head>
   <body></body>
 </html>
