--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="common.css" />
     <title>Portfolio JADR</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+  </head>
+  <body>
     <header class="header">
       <div class="header__logo">
         <img src="./assets/logo/logo-no-background.png" alt="logo" />
@@ -24,6 +27,5 @@
         </ul>
       </nav>
     </header>
-  </head>
-  <body></body>
+  </body>
 </html>
