--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <div class="header__logo">
-        <img src="./assets/logo/logo-no-background.png" alt="logo" />
+        <a href="#"><img src="./assets/logo/logo.svg" alt="logo" /></a>
       </div>
       <nav class="header__nav">
         <ul class="header__nav__list">
