feat: over effect

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div>
       <nav class="header__nav">
         <ul class="header__nav__list">
-          <li class="header__nav__list__item"><a href="#"></a>Inicio</li>
-          <li class="header__nav__list__item"><a href="#"></a>Skills</li>
-          <li class="header__nav__list__item"><a href="#"></a>Contacto</li>
+          <li class="header__nav__list__item"><a href="#">Inicio</a></li>
+          <li class="header__nav__list__item"><a href="#">Skills</a></li>
+          <li class="header__nav__list__item"><a href="#">Contacto</a></li>
         </ul>
       </nav>
     </header>
