--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <div class="header__logo">
-        <a href="#"><img src="./assets/logo/logo.svg" alt="logo" /></a>
+        <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
       </div>
       <nav class="header__nav">
         <ul class="header__nav__list">
@@ -27,5 +27,9 @@
         </ul>
       </nav>
     </header>
+    <section class="banner">
+      <div class="banner__image"></div>
+      <div class="banner__info"></div>
+    </section>
   </body>
 </html>
