--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/banner.css" />
   </head>
   <body>
     <header class="header">
@@ -29,7 +30,9 @@
     </header>
     <section class="banner">
       <div class="banner__image"></div>
-      <div class="banner__info"></div>
+      <div class="banner__info">
+        <h1>Portfolio J.Alberto Delgado</h1>
+      </div>
     </section>
   </body>
 </html>
