--- a/index.html
+++ b/index.html
@@ -34,5 +34,18 @@
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
     </section>
+    <section class="about">
+      <div class="about__title">
+        <h2>nunca es tarde para descubrir tu pasión</h2>
+      </div>
+      <div class="about__content">
+        ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de desarrollo
+        web. Mi pasión es resolver problemas a través de la programación.
+        Actualmente, me encuentro en un bootcamp de desarrollo web full stack,
+        ampliando mis habilidades en front-end y back-end. Mi meta es crecer
+        como profesional en el desarrollo web y aportar mi conocimiento a
+        proyectos futuros.
+      </div>
+    </section>
   </body>
 </html>
