--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/banner.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
   <body>
     <header class="header">
@@ -45,6 +46,9 @@
         ampliando mis habilidades en front-end y back-end. Mi meta es crecer
         como profesional en el desarrollo web y aportar mi conocimiento a
         proyectos futuros.
+      </div>
+      <div class="about__image">
+        <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
     </section>
   </body>
