feat: add margin--bottom class

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </ul>
       </nav>
     </header>
-    <section class="banner">
+    <section class="banner margin--bottom">
       <div class="banner__image"></div>
       <div class="banner__info">
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
     </section>
-    <section class="about">
+    <section class="about margin--bottom">
       <div class="about__title">
         <h2>nunca es tarde para descubrir tu pasión</h2>
       </div>
@@ -50,6 +50,9 @@
       <div class="about__image">
         <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
+    </section>
+    <section class="skills">
+      <h2 class="skills__title">Mis skills</h2>
     </section>
   </body>
 </html>
