--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/banner.css" />
     <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/skills.css" />
   </head>
   <body>
     <header class="header">
@@ -29,30 +30,40 @@
         </ul>
       </nav>
     </header>
-    <section class="banner margin--bottom">
+    <section class="banner">
       <div class="banner__image"></div>
       <div class="banner__info">
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
     </section>
-    <section class="about margin--bottom">
+    <section class="container about">
       <div class="about__title">
         <h2>nunca es tarde para descubrir tu pasión</h2>
       </div>
       <div class="about__content">
-        ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de desarrollo
-        web. Mi pasión es resolver problemas a través de la programación.
-        Actualmente, me encuentro en un bootcamp de desarrollo web full stack,
-        ampliando mis habilidades en front-end y back-end. Mi meta es crecer
-        como profesional en el desarrollo web y aportar mi conocimiento a
-        proyectos futuros.
+        <p>
+          ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de
+          desarrollo web. Mi pasión es resolver problemas a través de la
+          programación. Actualmente, me encuentro en un bootcamp de desarrollo
+          web full stack, ampliando mis habilidades en front-end y back-end. Mi
+          meta es crecer como profesional en el desarrollo web y aportar mi
+          conocimiento a proyectos futuros.
+        </p>
       </div>
       <div class="about__image">
         <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
     </section>
-    <section class="skills">
+    <section class="container skills">
       <h2 class="skills__title">Mis skills</h2>
+      <ul class="skills__list">
+        <li class="skills__item"></li>
+        <li class="skills__item"></li>
+        <li class="skills__item"></li>
+        <li class="skills__item"></li>
+        <li class="skills__item"></li>
+        <li class="skills__item"></li>
+      </ul>
     </section>
   </body>
 </html>
