feat: add skills logos and progress bar

--- a/index.html
+++ b/index.html
@@ -54,16 +54,36 @@
         <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
     </section>
-    <section class="container skills">
-      <h2 class="skills__title">Mis skills</h2>
-      <ul class="skills__list">
-        <li class="skills__item"></li>
-        <li class="skills__item"></li>
-        <li class="skills__item"></li>
-        <li class="skills__item"></li>
-        <li class="skills__item"></li>
-        <li class="skills__item"></li>
-      </ul>
+    <section class="skills">
+      <div class="container">
+        <h2 class="skills__title">Mis skills</h2>
+        <ul class="skills__list">
+          <li class="skills__item">
+            <img src="./assets/images/skills/html.svg" alt="" />
+            <progress max="100" value="95"></progress>
+          </li>
+          <li class="skills__item">
+            <img src="./assets/images/skills/css.svg" alt="" />
+            <progress max="100" value="80"></progress>
+          </li>
+          <li class="skills__item">
+            <img src="./assets/images/skills/js.svg" alt="" />
+            <progress max="100" value="85"></progress>
+          </li>
+          <li class="skills__item">
+            <img src="./assets/images/skills/ts.svg" alt="" />
+            <progress max="100" value="10"></progress>
+          </li>
+          <li class="skills__item">
+            <img src="./assets/images/skills/react.svg" alt="" />
+            <progress max="100" value="65"></progress>
+          </li>
+          <li class="skills__item">
+            <img src="./assets/images/skills/node.svg" alt="" />
+            <progress max="100" value="50"></progress>
+          </li>
+        </ul>
+      </div>
     </section>
   </body>
 </html>
