feat: add footer in html

--- a/index.html
+++ b/index.html
@@ -218,5 +218,13 @@
         </div>
       </form>
     </section>
+    <footer class="footer">
+      <div class="social">
+        <ul class="social-icons">
+          <li><img src="./assets/icons/linkedin.svg" alt="linkedin" /></li>
+          <li><img src="./assets/icons/github.svg" alt="github" /></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
