feat: footer css link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/about.css" />
     <link rel="stylesheet" href="styles/skills.css" />
     <link rel="stylesheet" href="styles/form.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body id="top">
     <header class="header">
@@ -219,11 +220,16 @@
       </form>
     </section>
     <footer class="footer">
-      <div class="social">
-        <ul class="social-icons">
-          <li><img src="./assets/icons/linkedin.svg" alt="linkedin" /></li>
-          <li><img src="./assets/icons/github.svg" alt="github" /></li>
-        </ul>
+      <div class="container">
+        <div class="footer__social">
+          <ul class="footer__social__icons">
+            <li><img src="./assets/icons/linkedin.svg" alt="linkedin" /></li>
+            <li><img src="./assets/icons/github.svg" alt="github" /></li>
+          </ul>
+        </div>
+        <div class="footer__copy">
+          <p>&copy;J.Alberto Delgado</p>
+        </div>
       </div>
     </footer>
   </body>
