feat: add bg related classes to some sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body id="top">
-    <header class="header">
+  <body class="background--animation" id="top">
+    <header class="header background--gradient">
       <div class="header__logo">
         <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
       </div>
@@ -41,7 +41,7 @@
       </nav>
     </header>
     <section class="banner">
-      <div class="banner__image"></div>
+      <div class="bg--fixed"></div>
       <div class="banner__info">
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
@@ -65,6 +65,7 @@
       </div>
     </section>
     <section id="skills" class="skills">
+      <div class="bg--fixed"></div>
       <div class="container">
         <h2 class="skills__title">Mis skills</h2>
         <ul class="skills__list">
@@ -219,7 +220,7 @@
         </div>
       </form>
     </section>
-    <footer class="footer">
+    <footer class="footer background--gradient">
       <div class="container">
         <div class="footer__social">
           <ul class="footer__social__icons">
