refactor: renamed background-- css classes to bg--

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="background--animation" id="top">
-    <header class="header background--gradient">
+  <body class="bg--animation" id="top">
+    <header class="header bg--gradient">
       <div class="header__logo">
         <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
       </div>
@@ -220,7 +220,7 @@
         </div>
       </form>
     </section>
-    <footer class="footer background--gradient">
+    <footer class="footer bg--gradient">
       <div class="container">
         <div class="footer__social">
           <ul class="footer__social__icons">
