feat: skills progress bar animation

--- a/index.html
+++ b/index.html
@@ -64,34 +64,64 @@
         <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
     </section>
-    <section id="skills" class="skills">
+    <section id="skills skills--container" class="skills">
       <div class="bg--fixed"></div>
       <div class="container">
         <h2 class="skills__title">Mis skills</h2>
         <ul class="skills__list">
           <li class="skills__item">
             <img src="./assets/images/skills/html.svg" alt="" />
-            <progress max="100" value="95"></progress>
+            <progress
+              class="progress--front html"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/css.svg" alt="" />
-            <progress max="100" value="80"></progress>
+            <progress
+              class="progress--front css"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/js.svg" alt="" />
-            <progress max="100" value="85"></progress>
+            <progress
+              class="progress--front js"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/ts.svg" alt="" />
-            <progress max="100" value="10"></progress>
+            <progress
+              class="progress--front ts"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/react.svg" alt="" />
-            <progress max="100" value="65"></progress>
+            <progress
+              class="progress--front react"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/node.svg" alt="" />
-            <progress max="100" value="50"></progress>
+            <progress
+              class="progress--front node"
+              max="100"
+              value="100"
+            ></progress>
+            <progress class="progress--back" max="100" value="100"></progress>
           </li>
         </ul>
       </div>
