feat: add bg--gradient to form

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </section>
     <section class="container">
-      <form class="form" method="post" action="/">
+      <form class="form bg--gradient" method="post" action="/">
         <div class="form__element">
           <label class="form__label" for="name">Nombre</label>
           <input
