--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
           <li class="header__nav__list__item header__nav__list__item--menu">
             <a href="#">Menu</a>
           </li>
-          <li class="header__nav__list__item"><a href="#">Inicio</a></li>
-          <li class="header__nav__list__item">
+          <li class="header__nav__list__item header__nav__list__item--menu">
+            <a href="#top">Inicio</a>
+          </li>
+          <li class="header__nav__list__item header__nav__list__item--menu">
             <a href="#skills">Skills</a>
           </li>
-          <li class="header__nav__list__item">
-            <a href="#">Contacto</a>
+          <li class="header__nav__list__item header__nav__list__item--menu">
+            <a href="#contact">Contacto</a>
           </li>
         </ul>
       </nav>
@@ -64,7 +66,7 @@
         <img src="./assets/images/about-img.jpg" alt="about img" />
       </div>
     </section>
-    <section id="skills skills--container" class="skills">
+    <section id="skills" class="skills">
       <div class="bg--fixed"></div>
       <div class="container">
         <h2 class="skills__title">Mis skills</h2>
@@ -126,7 +128,7 @@
         </ul>
       </div>
     </section>
-    <section class="container">
+    <section id="contact" class="container">
       <form class="form bg--gradient" method="post" action="/">
         <div class="form__element">
           <label class="form__label" for="name">Nombre</label>
