--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
       </div>
       <nav class="header__nav">
         <ul class="header__nav__list">
-          <li class="header__nav__list__item header__nav__list__item--menu">
+          <li class="header__nav__list__item hover-underline-animation">
             <a href="#">Menu</a>
           </li>
-          <li class="header__nav__list__item header__nav__list__item--menu">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#top">Inicio</a>
           </li>
-          <li class="header__nav__list__item header__nav__list__item--menu">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#skills">Skills</a>
           </li>
-          <li class="header__nav__list__item header__nav__list__item--menu">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#contact">Contacto</a>
           </li>
         </ul>
