feat: change progress bar animation in skills section

--- a/index.html
+++ b/index.html
@@ -74,62 +74,56 @@
     </section>
     <section id="skills" class="skills">
       <div class="bg--fixed"></div>
-      <div class="container">
+      <div class="container flex--skills">
         <h2 class="skills__title">Mis skills</h2>
         <ul class="skills__list">
           <li class="skills__item">
-            <img src="./assets/images/skills/html.svg" alt="" />
-            <progress
-              class="progress--front html"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/html.svg" alt="html" />
+            <div class="progress--container">
+              <div class="progress2 progress-html">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
           <li class="skills__item">
-            <img src="./assets/images/skills/css.svg" alt="" />
-            <progress
-              class="progress--front css"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/css.svg" alt="css" />
+            <div class="progress--container">
+              <div class="progress2 progress-css">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
           <li class="skills__item">
-            <img src="./assets/images/skills/js.svg" alt="" />
-            <progress
-              class="progress--front js"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/js.svg" alt="javascript" />
+            <div class="progress--container">
+              <div class="progress2 progress-js">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
           <li class="skills__item">
-            <img src="./assets/images/skills/ts.svg" alt="" />
-            <progress
-              class="progress--front ts"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/ts.svg" alt="typescript" />
+            <div class="progress--container">
+              <div class="progress2 progress-ts">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
           <li class="skills__item">
-            <img src="./assets/images/skills/react.svg" alt="" />
-            <progress
-              class="progress--front react"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/react.svg" alt="react" />
+            <div class="progress--container">
+              <div class="progress2 progress-react">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
           <li class="skills__item">
-            <img src="./assets/images/skills/node.svg" alt="" />
-            <progress
-              class="progress--front node"
-              max="100"
-              value="100"
-            ></progress>
-            <progress class="progress--back" max="100" value="100"></progress>
+            <img src="./assets/images/skills/node.svg" alt="node" />
+            <div class="progress--container">
+              <div class="progress2 progress-node">
+                <div class="progress-bar2"></div>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
