--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
           <li class="header__nav__list__item hover-underline-animation">
             <a href="#">Menu</a>
           </li>
-          <li class="header__nav__list__item hover-underline-animation">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#top">Inicio</a>
           </li>
-          <li class="header__nav__list__item hover-underline-animation">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#skills">Skills</a>
           </li>
-          <li class="header__nav__list__item hover-underline-animation">
+          <li
+            class="header__nav__list__item hover-underline-animation hidden--item"
+          >
             <a href="#contact">Contacto</a>
           </li>
         </ul>
