--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
     </section>
-    <section id="about" class="container about">
-      <div class="about__title">
-        <h2>nunca es tarde para descubrir tu pasión</h2>
-      </div>
+    <section id="about" class="about">
       <div class="about__content">
+        <h2>nunca es tarde para descubrir tu pasión</h2>
         <p>
           ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de
           desarrollo web. Mi pasión es resolver problemas a través de la
