--- a/index.html
+++ b/index.html
@@ -78,48 +78,48 @@
           <li class="skills__item">
             <img src="./assets/images/skills/html.svg" alt="html" />
             <div class="progress--container">
-              <div class="progress2 progress-html">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--html">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/css.svg" alt="css" />
             <div class="progress--container">
-              <div class="progress2 progress-css">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--css">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/js.svg" alt="javascript" />
             <div class="progress--container">
-              <div class="progress2 progress-js">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--js">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/ts.svg" alt="typescript" />
             <div class="progress--container">
-              <div class="progress2 progress-ts">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--ts">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/react.svg" alt="react" />
             <div class="progress--container">
-              <div class="progress2 progress-react">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--react">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
           <li class="skills__item">
             <img src="./assets/images/skills/node.svg" alt="node" />
             <div class="progress--container">
-              <div class="progress2 progress-node">
-                <div class="progress-bar2"></div>
+              <div class="progress progress--node">
+                <div class="progress--bar"></div>
               </div>
             </div>
           </li>
