--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
     <section id="skills" class="skills">
       <div class="bg--fixed"></div>
-      <div class="container flex--skills">
+      <div class="skills__container">
         <h2 class="skills__title">Mis skills</h2>
         <ul class="skills__list">
           <li class="skills__item">
