--- a/index.html
+++ b/index.html
@@ -22,31 +22,33 @@
   </head>
   <body class="bg--animation" id="top">
     <header class="header bg--gradient">
-      <div class="header__logo">
-        <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
+      <div class="header__items">
+        <div class="header__logo">
+          <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
+        </div>
+        <nav class="header__nav">
+          <ul class="header__nav__list">
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#">Menu</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="#top">Inicio</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="#skills">Skills</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="#contact">Contacto</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="header__nav">
-        <ul class="header__nav__list">
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#">Menu</a>
-          </li>
-          <li
-            class="header__nav__list__item hover-underline-animation hidden--item"
-          >
-            <a href="#top">Inicio</a>
-          </li>
-          <li
-            class="header__nav__list__item hover-underline-animation hidden--item"
-          >
-            <a href="#skills">Skills</a>
-          </li>
-          <li
-            class="header__nav__list__item hover-underline-animation hidden--item"
-          >
-            <a href="#contact">Contacto</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <section class="banner">
       <div class="bg--fixed"></div>
@@ -174,7 +176,7 @@
             placeholder="Formato @<username>"
           />
         </div>
-        <div class="form__element">
+        <div class="form__element known">
           <h3>¿Dónde me conociste?</h3>
           <div>
             <label for="university">Universidad</label>
@@ -221,7 +223,7 @@
             />
           </div>
         </div>
-        <div class="form__element">
+        <div class="form__element more--info">
           <label class="form__label" for="moreinfo">Más información</label>
           <textarea
             class="form__input"
