feat: add form__label class to github and known divs

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           />
         </div>
         <div class="form__element">
-          <label for="github">Tag Github</label>
+          <label class="form__label" for="github">Tag Github</label>
           <input
             class="form__input"
             type="text"
@@ -177,7 +177,7 @@
           />
         </div>
         <div class="form__element known">
-          <h3>¿Dónde me conociste?</h3>
+          <label class="form__label">¿Dónde me conociste?</label>
           <div>
             <label for="university">Universidad</label>
             <input
