--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             >
               <a href="#contact">Contacto</a>
             </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="./portfolio">Portfolio</a>
+            </li>
           </ul>
         </nav>
       </div>
