--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="./portfolio">Portfolio</a>
+              <a href="./portfolio.html">Portfolio</a>
             </li>
           </ul>
         </nav>
