--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,47 @@
         allowfullscreen
       ></iframe>
     </section>
+    <section class="projects">
+      <h2>Mis proyectos</h2>
+      <div class="projects">
+        <div class="project">
+          <img
+            class="project__image"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <p class="project__content__title">Forkify</p>
+            <ul class="project__content__techs">
+              <li class="tech--js">Javascript</li>
+              <li class="tech--html">HTML</li>
+              <li class="tech--css">CSS</li>
+            </ul>
+            <p class="project__content__description">
+              "Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="project__links__link"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="project__links__link"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer bg--gradient">
       <div class="container">
         <div class="footer__social">
