feat: add img tags to tech items, and refactor some tags and content

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/video.css" />
+    <link rel="stylesheet" href="styles/projects.css" />
   </head>
   <body class="bg--animation" id="top">
     <header class="header bg--gradient">
@@ -66,19 +67,25 @@
       <div class="projects">
         <div class="project">
           <img
-            class="project__image"
+            class="project__img"
             src="assets/images/projects/forkify.png"
             alt=""
           />
           <div class="project__content">
-            <p class="project__content__title">Forkify</p>
             <ul class="project__content__techs">
-              <li class="tech--js">Javascript</li>
-              <li class="tech--html">HTML</li>
-              <li class="tech--css">CSS</li>
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
             </ul>
+            <p class="project__content__title">Forkify</p>
             <p class="project__content__description">
-              "Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
               Las recetas se obtienen llamando a una API externa.",
             </p>
           </div>
