feat: add new class to radio buttons

--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
         <div class="form__element known">
           <label class="form__label">¿Dónde me conociste?</label>
           <div>
-            <label for="university">Universidad</label>
+            <label class="form__label--radio" for="university"
+              >Universidad</label
+            >
             <input
               class="form__input"
               type="radio"
@@ -196,7 +198,9 @@
             />
           </div>
           <div>
-            <label for="keepcoding">Keepcoding kick-off</label>
+            <label class="form__label--radio" for="keepcoding"
+              >Keepcoding kick-off</label
+            >
             <input
               class="form__input"
               type="radio"
@@ -207,7 +211,7 @@
             />
           </div>
           <div>
-            <label for="schooll">Colegio</label>
+            <label class="form__label--radio" for="schooll">Colegio</label>
             <input
               class="form__input"
               type="radio"
@@ -218,7 +222,7 @@
             />
           </div>
           <div>
-            <label for="github">En Github</label>
+            <label class="form__label--radio" for="github">En Github</label>
             <input
               class="form__input"
               type="radio"
