feat: 404 not found

--- a/404.html
+++ b/404.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="styles/skills.css" />
   </head>
   <body id="top">
-    <blz-showcase class="error-page" variant="top-background"
-      ><div class="not-found">
+    <section class="error-page" variant="top-background"></section>
+      <div class="not-found">
         <h1>404 - PAGE NOT FOUND</h1>
         <p>We’ve dispatched a rescue murloc to guide you back to safety.</p>
       </div>
@@ -41,13 +41,7 @@
           src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
           type="video/mp4"
         /></video
-      ><blz-image
-        class="background-image"
-        slot="background"
-        aspect-ratio="16:9"
-        src="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
-        bp="+xs"
-      ></blz-image
-    ></blz-showcase>
+      >
+    </section>
   </body>
 </html>
