feat: add background animation to 404 error page

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/404.css" />
   </head>
-  <body class="error-page-body" id="top">
+  <body class="bg--animation" id="top">
     <header class="header bg--gradient">
       <div class="header__items">
         <div class="header__logo">
