--- a/404.html
+++ b/404.html
@@ -21,7 +21,9 @@
     <header class="header bg--gradient">
       <div class="header__items">
         <div class="header__logo">
-          <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
+          <a href="/index.html"
+            ><img src="./assets/svg/logo.svg" alt="logo"
+          /></a>
         </div>
         <nav class="header__nav">
           <ul class="header__nav__list">
