style: change project title to h2

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                 <img src="./assets/images/skills/js.svg" alt="javascript" />
               </li>
             </ul>
-            <p class="project__content__title">Forkify</p>
+            <h2 class="project__content__title">Forkify</h2>
             <p class="project__content__description">
               Web APP en la que puedes buscar recetas y guardar tus favoritas.
               Las recetas se obtienen llamando a una API externa.",
