feat: finish styles for project

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,14 +91,14 @@
           </div>
           <div class="project__links">
             <a
-              class="project__links__link"
+              class="btn"
               href="https://github.com/jadr-dev/Forkify"
               target="_blank"
               rel="noopener noreferrer"
               >Github</a
             >
             <a
-              class="project__links__link"
+              class="btn"
               href="https://jadr-dev.github.io/Forkify/"
               target="_blank"
               rel="noopener noreferrer"
